@@ -282,6 +282,19 @@ jQuery(function($){
         return false;
     });
 
+    $('.sendtocouch').click(function (e) {
+        e.preventDefault();
+        $.get($(this).attr('rel'));
+
+        $.pnotify({
+            title: 'ADDED TO COUCHPOTATO!',
+            text: 'Its now on your wanted list! ^_^',
+            type: 'info',
+            animate_speed: 'fast',
+            icon: 'fa fa-info-sign'
+        });
+    });
+
 
     $("table.data a.modal_nfo").colorbox({	 // NFO modal
         href: function(){ return $(this).attr('href') +'&modal'; },
