@@ -358,6 +358,9 @@
 					{if $sabintegrated}
 						<a id="guid{$release.guid}" class="icon icon_sabNZBinfo fa fa-share"  style="text-decoration: none; color: #008ab8;" href="#" title="Send to queue"></a>
 					{/if}
+					{if !empty($cpurl) && !empty($cpapi)}
+						<a class="sendtocouch fa fa-bed" target="blackhole" href="javascript:;" rel="{$site->dereferrer_link}{$cpurl}/api/{$cpapi}/movie.add/?identifier=tt{$release.imdbid}&title={$movie.title}" name="CP{$release.imdbid}" title="Add to CouchPotato"></a>
+					{/if}
 				</dd>
 				<dt>Similar</dt>
 				<dd>
